# flantastic

./: .env-app  .env-db  .gitignore  README.md  builder.sh  docker-compose.yml  dumper.sh  heroku.sh  init-letsencrypt.sh
app/: Dockerfile  pyproject.toml
app/mysite/: settings.py  urls.py  wsgi.py
app/site/: settings.py  urls.py
data/nginx/: app.conf
nginx/: Dockerfile  nginx.conf
