[tool.poetry]
name = "app-flantastic"
packages = [
    {include = "mysite"}
]
version = "0.1.1"
description = "GeoDjango app deployment."
authors = ["Loic MARTEL"]
keywords = ["geo", "pudding", "flan", "french", "martel"]
homepage = "https://github.com/Simarra/flantastic"
repository = "https://github.com/Simarra/flantastic"
documentation = "https://github.com/Simarra/flantastic"
classifiers = [
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
exclude = [
]
include = []
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
django-flantastic = "==0.1.2"
gunicorn = "^20.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
